--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- matches  -->
             <div class="all-matches container">
                 <!-- Each form tag is Each row, This will render multiple times on Clicking 'Add Another Match' -->
-                <div class="match">
+                <div class="match" id="1">
                     <div class="wrapper">
                         <button class="lws-delete">
                             <img src="./image/delete.svg" alt="" />
@@ -45,6 +45,7 @@
                                 type="number"
                                 name="increment"
                                 class="lws-increment"
+                                id="increment"
                             />
                         </form>
                         <form class="decrementForm">
@@ -53,6 +54,7 @@
                                 type="number"
                                 name="decrement"
                                 class="lws-decrement"
+                                id="decrement"
                             />
                         </form>
                     </div>
@@ -60,6 +62,7 @@
                         <h2 class="lws-singleResult">120</h2>
                     </div>
                 </div>
+                
             </div>
             <!-- for adding another matches -->
             <div class="add_match">
